検索機能の追加

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -289,3 +289,17 @@ span.picture {
 .users.follow {
   padding: 0;
 }
+
+.user-search {
+  width: 30%;
+  // text-align: center;
+  // float: right;
+  margin-left: auto;
+  padding-right: 30px;
+}
+
+.home-search {
+  width: 50%;
+  margin-left: auto;
+  padding-right: 10px;
+}
