--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,11 @@
 <% provide(:title, 'All users') %>
 <h1>All users</h1>
-
+<div class="user-search">
+  <%= form_tag users_path, :method => 'get' do %>
+    <%= text_field_tag :search, params[:search], class: "form-control", placeholder: "Let's find user" %>
+    <%= submit_tag 'search', :name => nil, class: "btn btn-primary" %>
+  <% end %>
+</div>
 <%= will_paginate %>
 
 <ul class="users">
