--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,11 +10,18 @@
     <section class="stats">
       <%= render 'shared/stats' %>
     </section>
+    <section>
+        <%= form_tag user_path, :method => 'get' do %>
+          <%= text_field_tag :search, params[:search], class: "form-control", placeholder: "Find post" %>
+          <%= submit_tag 'search', :name => nil, class: "btn btn-primary" %>
+        <% end %>
+    </section>
   </aside>
   <div class="col-md-8">
     <%= render 'follow_form' if logged_in? %>
     <% if @user.microposts.any? %>
       <h3>Micropsts (<%= @user.microposts.count %>)</h3>
+
       <ol class="microposts">
         <%= render @microposts %>
       </ol>
