helpページの改善

--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -5,4 +5,13 @@
   To get help on this sample app, see the
   <a href="https://railstutorial.jp/#ebook"><em>Ruby on Rails Tutorial</em>
   book</a>.
+
+  <div class="center">
+    <h3>ログインにお使いください。</h3>
+    <ul class="help-guide">
+      <li>メールアドレス：aaa@mail.com</li>
+      <li>パスワード：aaaaaa</li>
+    </ul>
+  </div>
+
 </p>
