ログイン情報の変更

--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -9,8 +9,8 @@
   <div class="center">
     <h3>ログインにお使いください。</h3>
     <ul class="help-guide">
-      <li>メールアドレス：aaa@mail.com</li>
-      <li>パスワード：aaaaaa</li>
+      <li>メールアドレス：example@railstutorial.org</li>
+      <li>パスワード：foobar</li>
     </ul>
   </div>
 
